<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.graduation.ui.user.user_info.UserInfoActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <include layout="@layout/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dip">

            <RelativeLayout

                android:visibility="gone"
                android:id="@+id/rl_change_userImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/user_image"
                    android:textColor="@color/character_grey"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv_change_userImg"
                    android:layout_width="100dip"
                    android:layout_height="100dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/solo" />
            </RelativeLayout>
            <View
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:background="@color/line_grey" />
            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/rl_change_cellphone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/phone_num"
                    android:textColor="@color/character_grey"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv_change_cellphone"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_go" />

                <TextView
                    android:id="@+id/tv_change_cellphone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/iv_change_cellphone" />
            </RelativeLayout>



            <View
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:background="@color/line_grey" />

            <RelativeLayout
                android:id="@+id/rl_change_userName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/user_name"
                    android:textColor="@color/character_grey"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv_change_userName"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_go" />

                <TextView
                    android:id="@+id/tv_change_userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/iv_change_userName" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:background="@color/line_grey" />

            <RelativeLayout
                android:id="@+id/rl_change_userSex"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/sex"
                    android:textColor="@color/character_grey"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv_change_userSex"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_go" />

                <TextView
                    android:id="@+id/tv_change_userSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/iv_change_userSex" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:background="@color/line_grey" />

            <RelativeLayout
                android:id="@+id/rl_change_userAge"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/birthday"
                    android:textColor="@color/character_grey"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv_change_userAge"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_go" />

                <TextView
                    android:id="@+id/tv_change_userAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/iv_change_userAge" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:background="@color/line_grey" />
            <RelativeLayout
                android:id="@+id/rl_change_pwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/change_pwd"
                    android:textColor="@color/character_grey"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv_change_pwd"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_go" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:background="@color/line_grey" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
